fix(material/button): prevents mat-icon being cut off with text-spacing vertically
Updates Angular Components Button component specifically for .mat-icon buttons to
add a min-height of min-content to avoid the icon from being cut off on the bottom
when text-spacing is applied.

Fixes b/250063405

--- a/src/material/button/button.scss
+++ b/src/material/button/button.scss
@@ -7,6 +7,10 @@
 
 .mat-mdc-button-base {
   text-decoration: none;
+  // Makes button icon not cut off/shrink vertically making the icon visible to fix b/250063405
+  & .mat-icon {
+    min-height: min-content;
+  }
 }
 
 .mdc-button {
